@@ -1,6 +1,7 @@
 master
   - Add functionality to get all filters.
   - Allow to add filters at runtime.
+  - Allow to remove filters at runtime.
 
 1.5.4
   - Add unit tests for problematic parsing tasks.
